--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:27:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.MiPanoey()[pri:7, instance:B144.NewTest@366647c2]">MiPanoey</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:27:14</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:B144.NewTest@366647c2]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:26:44</td>   <td>-30635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.kopon_world()[pri:4, instance:B144.NewTest@366647c2]">kopon_world</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:27:14</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.maps()[pri:6, instance:B144.NewTest@366647c2]">maps</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:25:41</td>   <td>-93016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.member()[pri:0, instance:B144.NewTest@366647c2]">member</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:25:34</td>   <td>-99989</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.open_brows()[pri:0, instance:B144.NewTest@366647c2]">&gt;&gt;open_brows</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:26:31</td>   <td>-43252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.rateBusiness()[pri:3, instance:B144.NewTest@366647c2]">rateBusiness</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:26:04</td>   <td>-69914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.search_Business()[pri:2, instance:B144.NewTest@366647c2]">search_Business</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/03/18 12:27:14</td>   <td>-50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.search_people()[pri:5, instance:B144.NewTest@366647c2]">search_people</td> 
-  <td>main@1606286799</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>21/04/04 14:07:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:B144.NewTest@29647f75]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>21/04/04 14:06:30</td>   <td>-57999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fullSelf_ragistr()[pri:7, instance:B144.NewTest@29647f75]">fullSelf_ragistr</td> 
+  <td>main@262445056</td>   <td></td> </tr>
+<tr bgcolor="a2befb">  <td>21/04/04 14:06:14</td>   <td>-73350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.open_brows()[pri:0, instance:B144.NewTest@29647f75]">&gt;&gt;open_brows</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
 </table>
