--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\segal\AppData\Local\Temp\testng-eclipse-2046893976\testng-customsuite.xml</span>
+                    <span>C:\Users\segal\AppData\Local\Temp\testng-eclipse-1279670775\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="B144.NewTest" class="method navigator-link" hash-for-method="fullSelf_ragistr">fullSelf_ragistr</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="B144.NewTest" class="method navigator-link" hash-for-method="full_selfRegister">full_selfRegister</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="fullSelf_ragistr">
-                  </a> <!-- fullSelf_ragistr -->
-                  <span class="method-name">fullSelf_ragistr</span>
+                  <a name="full_selfRegister">
+                  </a> <!-- full_selfRegister -->
+                  <span class="method-name">full_selfRegister</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\segal\AppData\Local\Temp\testng-eclipse-2046893976\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\segal\AppData\Local\Temp\testng-eclipse-1279670775\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'fullSelf_ragistr')
+data.setCell(0, 1, 'full_selfRegister')
 data.setCell(0, 2, 'B144.NewTest')
-data.setCell(0, 3, 57994);
+data.setCell(0, 3, 6121);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 57 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,12 +225,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">fullSelf_ragistr</span>
-                <span class="method-start">15355 ms</span>
+                <span class="method-name">full_selfRegister</span>
+                <span class="method-start">7368 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">73354 ms</span>
+                <span class="method-start">13493 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
