--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2befb">  <td>21/04/04 14:07:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:B144.NewTest@29647f75]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/04/04 14:06:30</td>   <td>-57999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.fullSelf_ragistr()[pri:7, instance:B144.NewTest@29647f75]">fullSelf_ragistr</td> 
-  <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>21/04/04 14:06:14</td>   <td>-73350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.open_brows()[pri:0, instance:B144.NewTest@29647f75]">&gt;&gt;open_brows</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>21/04/14 09:42:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:B144.NewTest@10959ece]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@900636745</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>21/04/14 09:42:19</td>   <td>-6126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.full_selfRegister()[pri:7, instance:B144.NewTest@10959ece]">full_selfRegister</td> 
+  <td>main@900636745</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>21/04/14 09:42:12</td>   <td>-13491</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.open_brows()[pri:0, instance:B144.NewTest@10959ece]">&gt;&gt;open_brows</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@900636745</td>   <td></td> </tr>
 </table>
